--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "In order to use ECMAScript module syntax:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
